--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -85,8 +85,9 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
-        push: true
+        push: ${{ github.event_name == 'push' }}        
         tags: ghcr.io/rifatrzn/langchain_rag_llm:latest
+
         
     - name: Set up environment variables
       run: |
