--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -11,33 +11,33 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3  # Updated to latest version
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2  # Updated to latest version
+      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2  # Updated to latest version
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image to Docker Hub
-      uses: docker/build-push-action@v3  # Updated to latest version
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: true
         tags: rezwr01/project-server:latest
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2  # Updated to latest version
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.GHCR_PAT }}
 
     - name: Build and push Docker image to GHCR
-      uses: docker/build-push-action@v3  # Updated to latest version
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: true
@@ -47,7 +47,6 @@ jobs:
       run: |
         echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> $GITHUB_ENV
         echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
-        # Add other environment variables similarly
 
     - name: Run build
       run: |
