--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,5 +53,5 @@ jobs:
         docker build -t rezwr01/project-server .
         docker run -e NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }} \
                    -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
-                   rezwr01/project-server:latest
+                   rezwr01/project-server
 
