--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,8 +26,8 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        push: true
-        tags: rezwr01/project-server
+        push: docker push rezwr01/project-server:latest
+        tags: rezwr01/project-server:latest
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
