--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -56,5 +56,4 @@ jobs:
       run: |
         docker build -t rezwr01/project-server .
         docker run -e NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }} \
-                   -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
-                   rezwr01/project-server:latest
+                                      --name rag rezwr01/project-server:latest
