--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,18 +34,19 @@ jobs:
         tags: rezwr01/project-server:latest
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
+      uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_PAT }}
-
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: Build and push Docker image to GHCR
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v4
       with:
         context: .
+        file: ./project/Dockerfile
         push: true
-        tags: ghcr.io/rifatrzn/rag-server:latest
+        tags: ghcr.io/${{ github.repository_owner }}/rag-server:latest
 
     - name: Set up environment variables
       run: |
