--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,9 +29,13 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         context: .
-        file: ./project/Dockerfile
+        file: ./Dockerfile
         push: true
         tags: rezwr01/project-server:latest
+        build-args: |
+          PYTHON_VERSION=3.11.4
+        cache-from: type=registry,ref=rezwr01/project-server:buildcache
+        cache-to: type=registry,ref=rezwr01/project-server:buildcache,mode=max
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
@@ -44,9 +48,13 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: ./project/Dockerfile
+        file: ./Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/rag-server:latest
+        build-args: |
+          PYTHON_VERSION=3.11.4
+        cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/rag-server:buildcache
+        cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/rag-server:buildcache,mode=max
 
     - name: Set up environment variables
       run: |
