--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,13 +22,13 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image to Docker Hub
       uses: docker/build-push-action@v3
       with:
-        context: .
+        context: ./project
         file: ./project/Dockerfile
         push: true
         tags: rezwr01/project-server:latest
@@ -47,8 +47,8 @@ jobs:
     - name: Build and push Docker image to GHCR
       uses: docker/build-push-action@v4
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./project
+        file: ./project/Dockerfile
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/rag-server:latest
         build-args: |
@@ -63,7 +63,7 @@ jobs:
 
     - name: Run build
       run: |
-        docker build -t rezwr01/project-server .
+        docker build -t rezwr01/project-server ./project
         docker run -e NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }} \
                    -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
                    rezwr01/project-server:latest
