--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    timeout-minutes: 120
 
     steps:
     - name: Checkout repository
@@ -61,9 +62,28 @@ jobs:
         echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" >> $GITHUB_ENV
         echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
 
-    - name: Run build
+    - name: Run build and test
+      timeout-minutes: 30  # Set a 30-minute timeout for this step
       run: |
         docker build -t rezwr01/project-server ./project
-        docker run -e NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }} \
-                   -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
-                   rezwr01/project-server:latest
+        docker run --name test-container -d \
+          -e NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }} \
+          -e GROQ_API_KEY=${{ secrets.GROQ_API_KEY }} \
+          rezwr01/project-server:latest
+        
+        # Wait for container to start (adjust sleep time as needed)
+        sleep 30
+        
+        # Run your test commands here
+        docker exec test-container python -c "print('Container is running')"
+        
+        # Add more test commands as needed
+        
+        # Stop and remove the container
+        docker stop test-container
+        docker rm test-container
+
+    - name: Print execution time
+      if: always()
+      run: |
+        echo "Workflow execution time: ${{ job.status }} in ${{ format('{0} minutes {1} seconds', (steps.run-build.endTime - steps.run-build.startTime).minutes, (steps.run-build.endTime - steps.run-build.startTime).seconds) }}"
