--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -4,9 +4,22 @@ langchain
 langchain-nvidia-ai-endpoints
 langchain-community
 gradio==3.23.0
-requests==2.31.0
 rich==13.3.0
-python-dotenv==1.0.0
-faiss-cpu==1.7.3
-numpy==1.23.5
 pandas==1.5.3
+faiss-cpu
+numpy
+python-dotenv
+typing_extensions
+langchain_core
+urllib3
+tqdm
+charset_normalizer
+idna
+certifi
+starlette
+requests
+tenacity
+annotated_types
+packaging
+pydantic
+sentence-transformers
