--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,6 +21,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
+    - name: Clean up disk space
+      run: |
+        sudo docker system prune -af
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        df -h
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -45,6 +51,8 @@ jobs:
           ghcr.io/${{ github.repository_owner }}/app:latest
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/app:buildcache,mode=max
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
 
     - name: Build and push gradio image
       uses: docker/build-push-action@v5
@@ -57,6 +65,14 @@ jobs:
           ghcr.io/${{ github.repository_owner }}/gradio:latest
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/gradio:buildcache,mode=max
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
+
+    - name: Clean up after build
+      if: always()
+      run: |
+        sudo docker system prune -af
+        df -h
 
     - name: Set up environment variables
       run: |
@@ -67,38 +83,25 @@ jobs:
       id: build-and-test
       timeout-minutes: 30
       run: |
-        # Install Docker Compose
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
         docker-compose --version
 
-        start_time=$(date +%s)
-        
-        docker-compose -f ./project/docker-compose.yaml up -d
+        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" > ./project/.env
+        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> ./project/.env
 
-                
-        # Wait for containers to start
+        cd ./project
+        docker-compose up -d
         sleep 30
-        
-        # Run your test commands here
-        docker-compose -f ./project/docker-compose.yaml exec -T app python -c "print('App container is running')"
-        docker-compose -f ./project/docker-compose.yaml exec -T gradio python -c "print('Gradio container is running')"
-        
-        # Add more test commands as needed
-        
-        # Stop and remove the containers
-        docker-compose -f ./project/docker-compose.yaml down
-        
-        end_time=$(date +%s)
-        echo "duration=$((end_time - start_time))" >> $GITHUB_OUTPUT
+        docker-compose exec -T app python -c "print('App container is running')"
+        docker-compose exec -T gradio python -c "print('Gradio container is running')"
+        docker-compose down
 
-    - name: Print execution time
+    - name: Clean up after test
       if: always()
       run: |
-        duration=${{ steps.build-and-test.outputs.duration }}
-        minutes=$((duration / 60))
-        seconds=$((duration % 60))
-        echo "Build and test execution time: ${minutes} minutes and ${seconds} seconds"
+        sudo docker system prune -af
+        df -h
 
   test-deployment:
     needs: build-and-push
@@ -107,32 +110,38 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Clean up disk space
+      run: |
+        sudo docker system prune -af
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        df -h
+
     - name: Install Docker Compose and Run deployment test
       run: |
-        # Install Docker Compose
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
         sudo chmod +x /usr/local/bin/docker-compose
         docker-compose --version
 
-        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" > .env
-        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> .env
-        docker-compose -f ./project/docker-compose.yaml pull
-        docker-compose -f ./project/docker-compose.yaml up -d
+        echo "NVIDIA_API_KEY=${{ secrets.NVIDIA_API_KEY }}" > ./project/.env
+        echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> ./project/.env
 
-        # Wait for containers to start
+        cd ./project
+        docker-compose pull
+        docker-compose up -d
         sleep 30
-
-        # Check if ports are open
+        
         nc -zv localhost 8001 || echo "Port 8001 is not open"
         nc -zv localhost 7860 || echo "Port 7860 is not open"
         nc -zv localhost 11434 || echo "Port 11434 is not open"
 
-        # Check application health
         curl -f http://localhost:8001/health || echo "Health check failed for port 8001"
         curl -f http://localhost:7860/health || echo "Health check failed for port 7860"
 
-        # Print container logs
-        docker-compose -f ./project/docker-compose.yaml logs
+        docker-compose logs
+        docker-compose down
 
-        # Stop and remove containers
-        docker-compose -f ./project/docker-compose.yaml down
+    - name: Clean up after test
+      if: always()
+      run: |
+        sudo docker system prune -af
+        df -h
