--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,10 +21,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Clean up disk space
+    - name: Aggressive disk space cleanup
       run: |
-        sudo docker system prune -af
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker system prune -af
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
+        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
+        sudo rm -rf /home/linuxbrew
+        sudo rm -rf /usr/local/lib/node_modules
+        sudo rm -rf /var/lib/docker/overlay2
         df -h
 
     - name: Log in to Docker Hub
@@ -71,7 +78,7 @@ jobs:
     - name: Clean up after build
       if: always()
       run: |
-        sudo docker system prune -af
+        docker system prune -af
         df -h
 
     - name: Set up environment variables
@@ -100,7 +107,7 @@ jobs:
     - name: Clean up after test
       if: always()
       run: |
-        sudo docker system prune -af
+        docker system prune -af
         df -h
 
   test-deployment:
@@ -110,10 +117,17 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Clean up disk space
+    - name: Aggressive disk space cleanup
       run: |
-        sudo docker system prune -af
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo swapoff -a
+        sudo rm -f /swapfile
+        sudo apt clean
+        docker system prune -af
+        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /usr/local/share/boost
+        sudo rm -rf /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup
+        sudo rm -rf /home/linuxbrew
+        sudo rm -rf /usr/local/lib/node_modules
+        sudo rm -rf /var/lib/docker/overlay2
         df -h
 
     - name: Install Docker Compose and Run deployment test
@@ -143,5 +157,5 @@ jobs:
     - name: Clean up after test
       if: always()
       run: |
-        sudo docker system prune -af
+        docker system prune -af
         df -h
