--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,6 +1,7 @@
-# Build stage
-FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04 as builder
+# Start with the NVIDIA CUDA base image that has the necessary drivers
+FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04 as base
 
+# Set the working directory
 WORKDIR /app
 
 # Install Python and necessary dependencies
@@ -11,27 +12,24 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip and install dependencies
+# Ensure pip is up-to-date
+RUN python3 -m pip install --upgrade pip
+
+# Copy requirements file and install Python dependencies
 COPY requirements.txt .
+
 ENV PIP_DEFAULT_TIMEOUT=100
-RUN python3 -m pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
 
-# Final stage
-FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
-
-WORKDIR /app
-
-# Copy Python and installed packages from builder
-COPY --from=builder /usr/bin/python3 /usr/bin/python3
-COPY --from=builder /usr/local/lib/python3.10 /usr/local/lib/python3.10
-COPY --from=builder /usr/local/bin /usr/local/bin
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application files
-COPY app_server.py vector_embed.py ./
+COPY app_server.py vector_embed.py update_vector_db.sh ./
 
-# Copy pre-built embeddings
+# Copy pre-built embeddings into the container
 COPY nomic_embed /app/nomic_embed
+
+RUN chmod +x update_vector_db.sh
 
 # Create necessary directories
 RUN mkdir -p /app/docs
